force-app/main/default/objects/SVMXA360__ConfigurationUsage__c/SVMXA360__ConfigurationUsage__c.object-meta.xml
<CustomObject>
    <description>This object is used to store information about configuration used in different entities.</description>
    <label>Configuration Usage</label>
    <nameField>
        <displayFormat>CU-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>