force-app/main/default/objects/SVMXA360__ConfigurationUsage__c/fields/SVMXA360__EntityId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntityId__c</fullName>
    <description>This field stores id of entity</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Entity Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>