force-app/main/default/objects/SVMXA360__ConfigurationUsage__c/fields/SVMXA360__EntityLabel__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntityLabel__c</fullName>
    <description>This field stores entity label where configuration is used</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Entity Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>