force-app/main/default/objects/SVMXA360__ConfigurationUsage__c/fields/SVMXA360__EntityName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntityName__c</fullName>
    <description>This field is used to store entity name where configuration is used</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Entity Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>