force-app/main/default/objects/SVMXA360__ConfigurationUsage__c/fields/SVMXA360__EntityType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntityType__c</fullName>
    <description>This field stores the entity type where configuration is used.</description>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RecordPage</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>