force-app/main/default/objects/SVMXA360__ConfigurationUsage__c/fields/SVMXA360__TransactionId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TransactionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores transaction Id</description>
    <label>SPM Transaction</label>
    <referenceTo>SVMXA360__CONF_Layout__c</referenceTo>
    <relationshipLabel>Configuration Usages</relationshipLabel>
    <relationshipName>ConfigurationUsages</relationshipName>
    <type>Lookup</type>
</CustomField>